Added needed translations

--- a/src/main/resources/vaadin-i18n/translations.properties
+++ b/src/main/resources/vaadin-i18n/translations.properties
@@ -71,6 +71,42 @@ loginView.submit=Einloggen
 loginView.error.title=Falscher Benutzername oder Passwort
 loginView.error.message=Überprüfe deine Eingaben und versuche es noch einmal.
 
+mealView.title=Z'nacht Abstimmung
+mealView.groupSelect=Gruppe auswählen
+mealView.suggestionField=Dein Vorschlag
+mealView.error.suggestionField=Der Vorschlag darf nicht leer sein
+mealView.error.noSuggestionVote=Etwas ist schiefgelaufen. Bitte lade die Seite neu.
+
+mealSuggestionEntityService.error.groupNull=Die gelieferte Gruppe ist "null"
+mealSuggestionEntityService.error.dateNull=Das gelieferte Datum ist "null"
+mealSuggestionEntityService.message.getByGroupAndDate=Essens-Vorschläge erfolgreich nach Gruppe und Datum geladen
+mealSuggestionEntityService.error.idNull=Die gelieferte ID ist "null"
+mealSuggestionEntityService.error.noSuchMealSuggestion=Es wurde kein solcher Essens-Vorschlag gefunden
+mealSuggestionEntityService.message.getById=Essens-Vorschlag erfolgreich nach ID gefunden
+mealSuggestionEntityService.error.noMealSuggestionsFound=Es wurden keine Essens-Vorschläge gefunden
+mealSuggestionEntityService.message.getAll=Alle Essens-Vorschläge geladen
+mealSuggestionEntityService.error.delete.entityNull=Der gelieferte Essens-Vorschlag ist "null"
+mealSuggestionEntityService.error.delete.idNull=Die ID des Essens-Vorschlags ist "null"
+mealSuggestionEntityService.message.delete=Essens-Vorschlag gelöscht
+mealSuggestionEntityService.error.save.entityNull=Gelieferter Essens-Vorschlag ist "null"
+mealSuggestionEntityService.message.save=Essens-Vorschlag abgespeichert
+mealSuggestionEntityService.error.general=Etwas ist mit der Datenbank falsch gelaufen
+
+mealSuggestionVoteEntityService.error.userNull=Der gelieferte Benutzer ist "null"
+mealSuggestionVoteEntityService.error.mealSuggestionNull=Der gelieferte Essens-Vorschlag ist "null"
+mealSuggestionVoteEntityService.message.getByPersonAndMealSuggestion=Stimmen erfolgreich nach Gruppe und Datum geladen
+mealSuggestionVoteEntityService.error.idNull=Die gelieferte ID ist "null"
+mealSuggestionVoteEntityService.error.noSuchMealSuggestionVote=Es wurde keine solche Stimme gefunden
+mealSuggestionVoteEntityService.message.getById=Stimme erfolgreich nach ID gefunden
+mealSuggestionVoteEntityService.error.noMealSuggestionVotesFound=Es wurden keine Stimmen gefunden
+mealSuggestionVoteEntityService.message.getAll=Alle Stimmen geladen
+mealSuggestionVoteEntityService.error.delete.entityNull=Die gelieferte Stimme ist "null"
+mealSuggestionVoteEntityService.error.delete.idNull=Die ID der Stimme ist "null"
+mealSuggestionVoteEntityService.message.delete=Stimme gelöscht
+mealSuggestionVoteEntityService.error.save.entityNull=Gelieferte Stimme ist "null"
+mealSuggestionVoteEntityService.message.save=Stimme abgespeichert
+mealSuggestionVoteEntityService.error.general=Etwas ist mit der Datenbank falsch gelaufen
+
 registerView.title=Registrieren
 registerView.username=Benutzername
 registerView.password=Passwort
