Added translations for password validation

--- a/src/main/resources/vaadin-i18n/translations.properties
+++ b/src/main/resources/vaadin-i18n/translations.properties
@@ -110,10 +110,16 @@ mealSuggestionVoteEntityService.error.general=Etwas ist mit der Datenbank falsch
 registerView.title=Registrieren
 registerView.username=Benutzername
 registerView.password=Passwort
-registerView.password.helper=Mindestens ein Gross- und Kleinbuchstabe, sowie eine Zahl und ein Sonderzeichen. Mindestens 8 Zeichen
+registerView.password.helper=Mindestens ein Gross- und Kleinbuchstabe, sowie eine Zahl und eines von "@#$%^&+=". Zwischen 8 und 20 Zeichen
 registerView.group=Gruppen-Code
 registerView.registerButton=Registrieren
 registerView.loginLink=Bereits ein Account? Login!
 registerView.message.registered=Du hast dich erfolgreich registriert!
-registerView.error.weakPassword=Bitte wähle ein stärkeres Passwort
+registerView.error.weakPassword=Bitte wähle ein anderes Passwort
 registerView.error.usernameExists=Dieser Benutzername ist bereits vergeben
+registrationView.password.validation.length=Passwort muss zwischen 8 und 20 Zeichen haben
+registrationView.password.validation.oneDigit=Passwort muss eine Zahl enthalten
+registrationView.password.validation.lowerCase=Passwort muss einen Kleinbuchstaben enthalten
+registrationView.password.validation.upperCase=Passwort muss einen Grossbuchstaben enthalten
+registrationView.password.validation.specialChar=Passwort muss eines von "@#$%^&+=" enthalten
+registrationView.password.validation.noSpace=Passwort darf kein Leerzeichen enthalten
