Added ProfileView translations

--- a/src/main/resources/vaadin-i18n/translations.properties
+++ b/src/main/resources/vaadin-i18n/translations.properties
@@ -107,6 +107,15 @@ mealSuggestionVoteEntityService.error.save.entityNull=Gelieferte Stimme ist "nul
 mealSuggestionVoteEntityService.message.save=Stimme abgespeichert
 mealSuggestionVoteEntityService.error.general=Etwas ist mit der Datenbank falsch gelaufen
 
+profileView.title=Profil
+profileView.userName=Benutzername
+profileView.userName.helperText=Benutzername kann nicht verändert werden
+profileView.displayName=Anzeigename
+profileView.displayName.error.empty=Anzeigename kann nicht leer sein
+profileView.displayName.message.save=Anzeigename gespeichert
+profileView.displayName.button=Speichern
+
+
 registerView.title=Registrieren
 registerView.username=Benutzername
 registerView.password=Passwort
