--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 server.port=${PORT:8080}
-logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
+application.name=ChoreManager
+
+spring.profiles.default=dev
 
 # Launch the default browser when starting the application in development mode
-vaadin.launch-browser=true
+vaadin.launch-browser=false
 # To improve the performance during development.
 # For more information https://vaadin.com/docs/latest/integrations/spring/configuration#special-configuration-parameters
 vaadin.allowed-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application
@@ -14,9 +16,3 @@ spring.jpa.defer-datasource-initialization = true
 ## a key by running `openssl rand -base64 32` and then passing the
 ## result to Spring Boot process by using the parameter `--jwt.auth.secret=`
 jwt.auth.secret=J6GOtcwC2NJI1l0VkHu20PacPFGTxpirBxWwynoHjsc=
-
-# PostgreSQL configuration.
-spring.datasource.url = jdbc:postgresql://zima.local:5432/wg_woche
-spring.datasource.username = postgres
-spring.datasource.password = Taq5GnM6i4zmdkgb
-spring.jpa.hibernate.ddl-auto = update
