--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,5 +24,5 @@ jobs:
       with:
         file: Dockerfile
         push: true
-        tags: '${{ secrets.REGISTRY_URL }}/choreManager/dev:latest'
+        tags: '${{ secrets.REGISTRY_URL }}/chore-manager/dev:latest'
 
