--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,9 +2,9 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "develop" ]
+    branches: [ "develop", "main" ]
   pull_request:
-    branches: [ "develop" ]
+    branches: [ "develop", "main" ]
 
 jobs:
   build_and_push:
@@ -24,5 +24,5 @@ jobs:
       with:
         file: Dockerfile
         push: true
-        tags: '${{ secrets.REGISTRY_URL }}/chore-manager/dev:latest'
+        tags: '${{ secrets.REGISTRY_URL }}/chore-manager/${GITHUB_REF##*/}:latest'
 
