--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,10 +19,12 @@ jobs:
         registry: ${{ secrets.REGISTRY_URL}}
         username: ${{ secrets.REGISTRY_USERNAME }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
+    - name: Get current branch
+      run: echo "BRANCH=${GITHUB_REF##*/}" >> $GITHUB_ENV
     - name: Build and push
       uses: docker/build-push-action@v2
       with:
         file: Dockerfile
         push: true
-        tags: '${{ secrets.REGISTRY_URL }}/chore-manager/${{ GITHUB_REF##*/ }}:latest'
+        tags: '${{ secrets.REGISTRY_URL }}/chore-manager/${{ env.BRANCH }}:latest'
 
